testing/framework/resources/Advanced/Failing/mondrian/query6201.e
USA	CA	Palo Alto	7495	Sandy Melton	Sandy Melton	F	S	High School Degree	$50K - $70K
